--- a/blog/templates/blog/about.html
+++ b/blog/templates/blog/about.html
@@ -1,4 +1,10 @@
 {% extends "blog/base.html" %}
 {% block content %}
-    <h1>This social network was built by Redian Marku.</h1>
+        <div class="jumbotron">
+  <h1 class="display-4">Hello, </h1>
+  <p class="lead">This is a simple students' online forum for interaction and information disemination on and off campus.</p>
+  <hr class="my-4">
+  <p>Its was developed by <strong>Bosede Enitan James</strong> for the award of B.Sc in Computer Science</p>
+
+</div>
 {% endblock content %}
