--- a/blog/templates/blog/post_delete.html
+++ b/blog/templates/blog/post_delete.html
@@ -6,12 +6,12 @@
         <fieldset class="form-group white-important">
             Do you really want to delete
         </fieldset>
-        <p class="bg-steel p-2"
+        <p class="bg-steel p-2 bg-light"
            style="border: 1px solid white; border-radius: 4px; word-wrap: break-word;">
-           {{ post.content }}
+           {{ post.content }}?
         </p>
         <div class="form-group">
-            <button class="btn btn-outline-primary" type="submit">Yes</button>
+            <button class="btn btn-outline-primary bg-danger" type="submit">Delete</button>
         </div>
     </form>
 </div>
