--- a/blog/static/blog/style.css
+++ b/blog/static/blog/style.css
@@ -24,7 +24,7 @@ body {
 .search-container {
     width: 300px;
     height: 45px;
-    background-color: #253341;
+    background-color: #ffffff;
     border-radius: 30px;
     display: flex;
 }
@@ -192,7 +192,8 @@ body {
 }
 
 .search-result-profile{
-    background-color: #253341;
+    background-color: white !important;
+    border: 2px black;
     border-radius: 20px;
     padding: 15px;
     margin: 9px;
