--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -9,16 +9,17 @@
         <link rel="stylesheet" type="text/css" href="{% static 'blog/style.css' %}">
         <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-        <link rel="icon" type="image/png" href="{% static 'blog/logo.png' %}">
+        <link rel="icon" type="image/png" href="{% static 'blog/noun.jpeg' %}">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
         <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.11.2/css/all.css" integrity="sha384-zrnmn8R8KkWl12rAZFt4yKjxplaDaT7/EUkKm7AovijfrQItFWR7O/JJn4DAa/gx" crossorigin="anonymous">
-        <title>BlogRoom</title>
+
+        <title>Students Forum</title>
     </head>
   <body>
       <header class="site-header">
       <nav
               style="border-bottom: 1px solid rgba(255, 255, 255, 0.1)"
-              class="navbar navbar-expand navbar-dark bg-steel">
+              class="navbar navbar-expand navbar-dark bg-success white-important">
         <div class="container">
           <div class="collapse navbar-collapse" id="navbarToggle">
             <div class="navbar-nav mr-auto pl-2">
@@ -27,7 +28,7 @@
             </div>
                         <div class="navbar-nav pr-2">
                 {% if user.is_authenticated %}
-                    <a class="nav-item nav-link" href="{% url 'post-create' %}">Create a Tweet</a>
+                    <a class="nav-item nav-link" href="{% url 'post-create' %}">Create a Post</a>
                     <a class="nav-item nav-link" href="{% url 'profile' %}">Settings</a>
                     <a class="nav-item nav-link" href="{% url 'logout' %}">Logout</a>
                 {% else %}
@@ -39,6 +40,7 @@
         </div>
       </nav>
     </header>
+
     <main role="main" class="container-fluid">
       <br>
       <div class="row">
