--- a/blog/templates/blog/post_detail.html
+++ b/blog/templates/blog/post_detail.html
@@ -22,19 +22,19 @@
                <div class="col-4 d-flex flex-row-reverse no-padding align-items-center"
                     style="padding-right: 0 !important;">
                    {% if post.author == user %}
-                        <a class="material-icons ml-2"
-                           style="font-size: 14px"
+                        <a class="material-icons ml-2 text-danger"
+                           style="font-size: 34px"
                                 href="{% url 'post-delete' post.id %}">clear</a>
-                        <a class="material-icons ml-2"
-                           style="font-size: 14px"
+                        <a class="material-icons ml-2 text-success"
+                           style="font-size: 34px"
                                 href="{% url 'post-update' post.id %}">update</a>
                     {%  endif %}
                </div>
            </div>
             <div
                     class="mb-2 "
-                    style="width: 100%; height: 1px; background-color: rgba(255, 255, 255, 0.1)"></div>
-            <a style="color: rgba(255, 255, 255, 0.5) !important;">
+                    style="width: 100%; height: 1px; background-color: black"></div>
+            <a>
                 <p>
                     {{ post.content }}
                 </p>
@@ -69,8 +69,8 @@
                </div>
                 <div
                         class="mb-2"
-                        style="width: 100%; height: 1px; background-color: rgba(255, 255, 255, 0.1)"></div>
-                <a style="color: rgba(255, 255, 255, 0.5) !important;">
+                        style="width: 100%; height: 1px; background-color: black"></div>
+                <a style="color: black">
                     <p>
                         {{ comment.content }}
                     </p>
