--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -33,7 +33,8 @@
                     <a class="nav-item nav-link" href="{% url 'logout' %}">Logout</a>
                 {% else %}
                     <a class="nav-item nav-link" href="{% url 'login' %}">Login</a>
-                    <a class="nav-item nav-link" href="{% url 'register-users' %}">Register</a>
+                             <a class="nav-item nav-link" href="{% url 'blog-student' %}">Verify to Register</a>
+                   <!-- <a class="nav-item nav-link" href="{% url 'register-users' %}">Register</a>-->
                 {% endif %}
             </div>
           </div>
